--- a/rirods_ugm_2023.qmd
+++ b/rirods_ugm_2023.qmd
@@ -32,7 +32,6 @@ n_pkg <- html_text(xc[2]) |>
   parse_number()
 ```
 
-
 -   Used by researchers and industry
 -   Open sourced, active useRs community (`r formatC( n_pkg, format="f", digits=0, big.mark=",")` packages)
 -   Emphasis on statistics and visualization of data
@@ -61,11 +60,11 @@ popR |>
 
 ::: notes
 -   R is used for data science.
-  +   Data exploration.
-  +   Actual inference and predictive modelling.
+-   Data exploration.
+-   Actual inference and predictive modelling.
 -   The figure is an example of R's data visualization.
--   Data is based on a poll with 1800 participants: 
-  +   "Which program do they use as Data Science platforms?"
+-   Data is based on a poll with 1800 participants:
+-   "Which program do they use as Data Science platforms?"
 :::
 
 ## Reproducible workflows
@@ -82,9 +81,9 @@ popR |>
 *SQLite, MySQL, PostgreSQL, MonetDB with `DBI` package*
 
 ::: notes
--   Arguments already given; R used for data science
--   Important asset is reproducible workflows (scripts and literate programming) => more efficient and precise analysis
--   Data management constrained to SQL databases (DBI), intrinsically linked to tabular formats
+-   Arguments already given; R used for data science.
+-   Important asset is reproducible workflows (scripts and literate programming) =\> more efficient and precise analysis.
+-   Data management constrained to SQL databases (DBI), intrinsically linked to tabular formats.
 -   Reformatting required!
 -   Can we store R objects just as they are?
 :::
@@ -107,14 +106,13 @@ summary(BMI)
 ```
 
 ::: notes
--   iRODS for R
--   gave it away => iRODS would free us from the strict formatting requirements
--   Data storage: reduce restrictions => less transformation to be able to get it in the right format => tabular format => higher productivity
+-   iRODS for R.
+-   Gave it away =\> iRODS would free us from the strict formatting requirements.
+-   Data storage: reduce restrictions =\> less transformation to be able to get it in the right format =\> tabular format =\> higher productivity.
 -   I exemplify this here with very simple linear regression analysis with weight depended on height in humans, or BMI.
--   Examine output (summary) of the model on next slide => this is a fairly complex model and this is only the summary
--   Transformations required to get it tabular
--   Or, we have to pick and choose what we think is most convenient at that point in time
-
+-   Examine output (summary) of the model on next slide =\> this is a fairly complex model and this is only the summary
+-   Transformations required to get it tabular.
+-   Or, we have to pick and choose what we think is most convenient at that point in time.
 :::
 
 ## Why iRODS?
@@ -125,9 +123,9 @@ summary(BMI)
 *What was object `BMI` again?*
 
 ::: notes
--   A second major benefit will be the ability to better describe/annotate 
--   Thereby making it findable/discoverable for your future self or for others 
--   What was this object **BMI** again? => Let's have a look with rirods.
+-   A second major benefit will be the ability to better describe/annotate.
+-   Thereby making it findable/discoverable for your future self or for others.
+-   What was this object **BMI** again? =\> Let's have a look with rirods.
 :::
 
 ## Why iRODS?
@@ -160,7 +158,7 @@ rirods:::new_irods_df(mock_ils)
 # Designing an R Package
 
 ::: notes
--   Now that we covered the need for iRODS in R. 
+-   Now that we covered the need for iRODS in R.
 -   Let's look at how we develop a package that can be most conveniently used by R users.
 :::
 
@@ -176,7 +174,7 @@ rirods:::new_irods_df(mock_ils)
     -   `R CMD check` 50+ tests
 
 ::: notes
--   For that we have to turn to the official repository for R packages => CRAN.
+-   For that we have to turn to the official repository for R packages =\> CRAN.
 -   Portability: It has to run on the major three operating systems.
 -   Stability: To ensure high quality functioning packages.
 -   Tested means it has to run on Linux, macOS and Windows under different versions of R.
@@ -197,14 +195,14 @@ rirods:::new_irods_df(mock_ils)
 | **Stability**   |     ✓      |    ❌     |
 
 ::: notes
- - Some of you might be aware that there used to be already an R package on the iRODS GitHub organization. 
- - It did not comply with some of the previous requirements for CRAN
- - And it was also not on CRAN
- - It worked by using the C++ API
- - Where we now decided for a completely different approach => using the REST API
- - The listed pros and cons are maybe not entirely fair, but
-  +   This solution is portable as it is truly distributed and can does run on the major platforms.
-  +   It is stable, as it only requires minimal logic to be able to communicate over http. 
+-   Some of you might be aware that there used to be already an R package on the iRODS GitHub organization.
+-   It did not comply with some of the previous requirements for CRAN
+-   And it was also not on CRAN
+-   It worked by using the C++ API
+-   Where we now decided for a completely different approach =\> using the REST API
+-   The listed pros and cons are maybe not entirely fair, but
+-   This solution is portable as it is truly distributed and can does run on the major platforms.
+-   It is stable, as it only requires minimal logic to be able to communicate over http.
 :::
 
 ## Global Design
@@ -222,24 +220,24 @@ rirods:::new_irods_df(mock_ils)
 :::
 
 ::: notes
-- Let's look at some of the design choices that we made.
-- We tried to mimic the iCommands where we mainly exposed the user facing end-points.
-- We have a modular design which ensures the adaptability => for example with a new REST API. 
+-   Let's look at some of the design choices that we made.
+-   We tried to mimic the iCommands where we mainly exposed the user facing end-points.
+-   We have a modular design which ensures the adaptability =\> for example with a new REST API.
 :::
 
 ## Interface
 
-|                    |                            rirods                       |            iCommands            |
-|--------------------|:-------------------------------------------------------:|:-------------------------------:|
+|                    |                         rirods                          |            iCommands            |
+|-----------------|:---------------------------------:|:------------------:|
 | **Authentication** |                         `iauth`                         |             `iinit`             |
 | **Navigation**     |                  `icd`, `ils`, `ipwd`                   |      `icd`, `ils`, `ipwd`       |
 | **Objects**        | `iput`, `iget`, `imkdir`, `irm`, `isaveRDS`, `ireadRDS` | `iput`, `iget`, `imkdir`, `irm` |
 | **Metadata**       |                    `imeta`, `iquery`                    |        `imeta`, `iquest`        |
 
 ::: notes
-- Let's look at the function so far in rirods.
-- One can see the similarities with the iCommands but also some changes
-- For example isaveRDS and ireadRDS which strictly deal with in memory R objects
+-   Let's look at the function so far in rirods.
+-   One can see the similarities with the iCommands but also some changes
+-   For example isaveRDS and ireadRDS which strictly deal with in memory R objects
 :::
 
 ## Implementation {.smaller}
@@ -261,11 +259,11 @@ knitr::write_bib(pkgs, "packages.bib", prefix = "")
     -   `R CMD check` without internet (simulate CRAN checks)
 
 ::: notes
-- Some notes on how we actually achieved this.
-- Luckily we don't have to start from scratch there is already a R interface to libcurl and packages dealing with JSON-R parsing
-- For the development we could use the irods_demo Docker collections, which was rely convenient.
-- We use a technique based on http mocking for unit testing so we can test even without having iRODS server with REST API
-- The latter is important for CRAN checks as we would not have that.
+-   Some notes on how we actually achieved this.
+-   Luckily we don't have to start from scratch there is already a R interface to libcurl and packages dealing with JSON-R parsing
+-   For the development we could use the irods_demo Docker collections, which was rely convenient.
+-   We use a technique based on http mocking for unit testing so we can test even without having iRODS server with REST API
+-   The latter is important for CRAN checks as we would not have that.
 :::
 
 ## Maintenance
@@ -277,9 +275,9 @@ knitr::write_bib(pkgs, "packages.bib", prefix = "")
 -   Website: <https://irods.github.io/irods_client_library_rirods>
 
 ::: notes
-- All source code is online on the iRODS GitHub organization. 
-- For the foreseeable future we have two maintainers. Myself, currently at the Vienna University of Technology and Mariana Montes at the KU Leuven.
-- Let's have a quick glance at the website.
+-   All source code is online on the iRODS GitHub organization.
+-   For the foreseeable future we have two maintainers. Myself, currently at the Vienna University of Technology and Mariana Montes at the KU Leuven.
+-   Let's have a quick glance at the website.
 :::
 
 ##  {background-iframe="https://irods.github.io/irods_client_library_rirods" background-interactive="true"}
@@ -305,9 +303,9 @@ Case study:
 -   <https://raw.githubusercontent.com/FAIReLABS/iRODS4R/main/posts/welcome/data/irods_repos.csv>
 
 ::: notes
-- I want to do a little demo now.
-- For those that want to follow or re-create, these are the requirements.
-- The data that I use is about some GitHub stats of iRODS.
+-   I want to do a little demo now.
+-   For those that want to follow or re-create, these are the requirements.
+-   The data that I use is about some GitHub stats of iRODS.
 :::
 
 ## References
